--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -35,15 +35,15 @@
           [style]="{'width':'115px', 'max-width': '100%', 'margin-left': '5px', 'height': '32px'}"
           (onChange)="handleChange('single',k)" [virtualScroll]="true" [virtualScrollItemSize]="30"
           [panelStyle]="{ 'min-width': 'min(100vw, 300px)', 'overflow-x': 'hidden' }"></p-dropdown>
-
       </ng-container>
     </div>
     <div *ngSwitchCase="'multiselectdropdown'" class="p-d-flex p-jc-end">
       <ng-container *ngFor="let filter of dropdownArr;let k = index">
         <ng-select *ngIf="filter?.options?.length && filter.filterType === 'Duration'"
-          [(ngModel)]="filterOptions['filter'+(k+1)]" [dropdownPosition]="'bottom'" [filter]="false"
-          [showHeader]="false" (change)="handleChange('multi')" [placeholder]="filter?.filterType" [clearable]="false"
-          class="p-pb-0 kpi-dropdown" [ngClass]="{'p-mr-3': k != (dropdownArr?.length-1)}">
+          [(ngModel)]="filterOptions['filter'+(k+1)]"
+          [dropdownPosition]="'bottom'" [filter]="false" [showHeader]="false" (change)="handleChange('multi')"
+          [placeholder]="filter?.filterType" [clearable]="false" class="p-pb-0 kpi-dropdown"
+          [ngClass]="{'p-mr-3': k != (dropdownArr?.length-1)}">
           <ng-container *ngFor="let item of filter?.options; index as i">
             <ng-option [value]="item">
               {{item}}
@@ -55,8 +55,8 @@
           inputId="multiselectFilter" [options]="filter?.options" [(ngModel)]="filterOptions['filter'+(k+1)]"
           (onChange)="handleChange('multi', $event, k)" [filter]="false" [showHeader]="false" [maxSelectedLabels]="3"
           selectedItemsLabel="{0} items selected" (onClear)="handleClearAll('filter'+(k+1))"
-          [style]="{'max-width': '100%', 'height': '32px'}" [showClear]="true" defaultLabel="{{filter?.filterType}}"
-          [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }">
+          [style]="{'max-width': '100%', 'margin-left': '5px', 'height': '32px'}" [showClear]="true"
+          defaultLabel="{{filter?.filterType}}" [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }">
         </p-multiSelect>
       </ng-container>
     </div>
