--- a/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
+++ b/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
@@ -13,6 +13,13 @@
     left: 0;
     min-height: 140px;
 }
+
+:host .tooltip.allText {
+    min-height: unset;
+    padding: 10px 0 20px 0 !important;
+    border-left: 5px solid #F68605;
+}
+
 :host .tooltip h4{
     font-family: var(--font-medium);
     margin: 5px 0;
