--- a/UI/src/app/component/tooltip-v2/tooltip-v2.component.html
+++ b/UI/src/app/component/tooltip-v2/tooltip-v2.component.html
@@ -66,7 +66,7 @@
   </div>
 
   <div *ngIf="allText">
-    <p class=" paragraph p-pl-3 p-mb-0">
+    <p class=" paragraph p-px-2 p-mb-0">
       {{data}}
     </p>
   </div>
