--- a/UI/src/app/dashboardv2/sticky-header-v2/sticky-header-v2.component.html
+++ b/UI/src/app/dashboardv2/sticky-header-v2/sticky-header-v2.component.html
@@ -4,7 +4,7 @@
     <span class="p-text-bold p-d-inline-block p-mr-3">{{ field.value }}</span>
   </ng-container>
   <div class="selected-filter-container p-d-flex p-jc-between p-pl-3 p-pr-3">
-    <ul class="p-m-0 p-pl-0 p-d-flex p-flex-wrap" *ngIf="colorObj && objectKeys(colorObj).length">
+    <ul class="p-m-0 p-pl-0 p-d-flex p-flex-wrap">
       <li class="selectedfilter" *ngFor="let item of objectKeys(colorObj); let i = index;">
         <div class="selected-node" style="display: flex;flex-wrap: nowrap;">
           <div class="selected-node-label p-pl-0" style="text-wrap: nowrap;" [title]="colorObj[item]?.nodeName">
